# xvn

./: .gitignore  .npmignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROJECT_PLAN.md  README.DEPRECATION.md  README.md  ROADMAP.md  WARP.md  install.js  package.json  test_version.sh  uninstall.js
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: do.md  do:milestone.md  do:phase.md  plan.md  plan:phase.md
.github/: MAKE_PUBLIC.md  PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
docs/: ARCHITECTURE.md  HOMEBREW_SETUP.md  MIGRATION.md  MIGRATION_ANNOUNCEMENT.md  PROJECT_PLAN.md  PROJECT_SPEC.md  TEST_REVIEW.md  XVN_TO_ANVS_MIGRATION.md  milestone-1-core-infrastructure.md  milestone-2-plugin-system.md  milestone-3-shell-integration.md  milestone-4-version-activation.md  milestone-5-testing-polish.md  milestone-6-release-preparation.md
docs/tasks/: main.md
homebrew/: anvs.rb
scripts/: README.md  bump-version.sh  coverage.sh  download-artifacts.sh  extract-binaries.sh  migrate-xvn-to-anvs.sh  setup-homebrew-tap.sh  version.sh
shell/: anvs.sh  xvn.ps1  xvn.sh
spec/: BACKLOG.md  PROGRESS.md  PROJECT_PLAN.md  milestone-3-shell-integration.md  milestone-4-version-activation.md
src/: cli.rs  engines_resolver.rs  error.rs  installation_detector.rs  lib.rs  main.rs  output.rs
tests/: cli_test.rs  config_test.rs  error_test.rs  init_test.rs  installer_test.rs  integration.rs  plugin_loading_test.rs  plugin_test.rs  security_test.rs  shell_integration.rs  version_file_test.rs  wizard_test.rs
(+108 files in other folders)
