[package]
name = "xvn"
version = "0.1.0"
edition = "2021"
authors = ["cameronolivier@gmail.com"]
description = "Extreme Version Switcher for Node.js"
license = "MIT"

[[bin]]
name = "xvn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
