[package]
name = "xvn"
version = "1.6.2"
edition = "2021"
authors = ["cameronolivier@gmail.com"]
description = "Extreme Version Switcher for Node.js"
license = "MIT"

[[bin]]
name = "xvn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
env_logger = "0.11"
log = "0.4"
shell-escape = "0.1"
libc = "0.2"
owo-colors = "4.1"
inquire = "0.7"
chrono = "0.4"
serde_json = "1.0"
semver = "1.0"
which = "6.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
